--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.client</groupId>
-    <artifactId>Client</artifactId>
+    <artifactId>UBZ-Client</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Client</name>
+    <name>UBZ-Clientt</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
